# termPlay

./: .gitignore  LICENSE  README.md  pyproject.toml  script.py
termplay/: __init__.py  __main__.py  cli.py  core.py
